<resources>

    <!--Please categorize your strings by the activity they are in.-->

    <!--general-->
    <string name="app_name">AndroidFinalProjectW18</string>

    <!--activity_main.xml-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="webster_dictionary_btn">Webster Dictionary</string>
    <string name="news_feed_btn">News Feed</string>
    <string name="flight_status_tracker_btn">Flight Status Tracker</string>
    <string name="nyt_article_search_btn">NYT Article Search</string>

    <!--activity_merriam_webster_dictionary.xml-->
    <string name="dummy_title">Hello world</string>
    <string name="saved_words">Saved Words</string>
    <string name="help_text">Webster Dictionary\nAuthor: Trevor Holmes\nVersion: 0.2.0\nFrom this page, you can search Merriam Webster for a word, or view words you have saved. You can tap on a word to view it.</string>
    <string name="dictionary_search">Search for a word</string>
    <string name="search_hint">Search</string>
    <string name="delete_dialog">Are you sure you want to delete all items? This process cannot be undone.</string>
    <string name="delete_confirm">Yes, I\'m sure</string>
    <string name="delete_success">All items successfully deleted</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="most_recent_search">Most Recent Search</string>

    <!--activity_webster_fragment.xml-->
    <string name="save_word">Save Word</string>
    <string name="delete_word">Delete Word</string>
    <string name="no_words_found">No words found.</string>
    <string name="suggestions">Here are some suggestions:</string>

    <!--FlightTracker-->
    <string name="flight_tracker_to_nyt_article_search">NYT Article Search</string>
    <string name="flight_tracker_to_news_feed">News Feed</string>
    <string name="flight_tracker_to_webster_dictionary">Webster Dictionary</string>
    <string name="flight_tracker_help">Help</string>
    <string name="flight_help_text">Created by Adam White\nVersion:1.0.0\nThis collects flight tracking statuses</string>
  
    <!--Newfeeds-->
    <string name="Entertosearch">Enter to search</string>
    <string name="Search">Search</string>
    <string name="SearchResults">SearchResults</string>
    <string name="Lastsearch">Last search</string>
    <string name="lastsearch">lastsearch</string>
    <string name="titleexample">This is a sample title</string>
    <string name="websitename">Website</string>
    <string name="authorname">Author name</string>
    <string name="backBnt">Back</string>
    <string name="deleteBtn">Delete</string>
    <string name="saveBtn">Add</string>
    <string name="goToBtn">Website</string>
    <string name="title">Title</string>
    <string name="website">Website</string>
    <string name="author">Author Name</string>
    <string name="comment">Comment</string>
    <string name="fragmentalert">Alert</string>
    <string name="fragmentadd">Added to favorite</string>
    <string name="fragmentdelete">Do you want to delete</string>
    <string name="fragmentdl">Deleted</string>
    <string name="fragmentcancel">Cancel</string>

    <string name="flight_number">Flight number</string>
    <string name="flight_arrival">Arriving at airport</string>
    <string name="flight_tracker_edit_text_hint">Enter airport code</string>
    <string name="flight_button_text">Search</string>
    <string name="latitude_title">Latitude</string>
    <string name="longitude_title">Longitude</string>
    <string name="altitude_title">Altitude</string>
    <string name="status_title">Status</string>
    <string name="flight_tracker_delete_button">Delete</string>

    <string name="ny_title">The New York Times</string>
    <string name="ny_adapter_add">Added to bookmark</string>
    <string name="ny_adapter_goto">Go to Bookmark</string>
    <string name="ny_adapter_remove">Removed from bookmark</string>
    <string name="ny_detail_readmore">Read more</string>
    <string name="ny_searchdialog_title">Search story</string>
    <string name="ny_searchdialog_hint">Enter text to search</string>
    <string name="ny_searchdialog_searchbtn">Search</string>
    <string name="ny_searchdialog_cancelbtn">Cancel</string>
    <string name="ny_helpdialog_title">Help Menu</string>
    <string name="ny_helpdialog_stdName">Student name:</string>
    <string name="ny_helpdialog_stdName2">Ba Phuc Nguyen</string>
    <string name="ny_helpdialog_appName">App name:</string>
    <string name="ny_helpdialog_appName2">The New York Times</string>
    <string name="ny_helpdialog_help">Click on the search button and enter term you want to search. Click to bookmark button to add to Bookmark page for read later, click again to remove from Bookmark Page</string>
    <string name="ny_helpdialog_closebtn">Close</string>
    <string name ="ny_menu_dictinary">Dictionary</string>
    <string name ="ny_menu_newsfeed">News Feed</string>
    <string name ="ny_menu_flight">Flight Tracker</string>
</resources>
