<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/flight_to_nyt"
    android:icon="@drawable/flight_tracker_to_nyt"
    android:title="@string/flight_tracker_to_nyt_article_search"
    android:orderInCategory="1"
    app:showAsAction="always"/>

    <item
        android:id="@+id/flight_to_dictionary"
        android:icon="@drawable/flight_tracker_to_dictionary"
        android:title="@string/flight_tracker_to_webster_dictionary"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/flight_to_newsfeed"
        android:icon="@drawable/flight_tracker_to_newsfeed"
        android:title="@string/flight_tracker_to_news_feed"
        android:orderInCategory="3"
        app:showAsAction="always"/>
    <item
        android:id="@+id/flight_help"
        android:icon="@drawable/flight_tracker_help"
        android:title="@string/flight_tracker_help"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>
</menu>