<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/dictionary_search"
        android:id="@+id/dictionarySearch"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:title="Help"
        android:id="@+id/helpButton"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dictionary_to_flight"
        android:icon="@drawable/icons8_airport_48"
        android:title="@string/flight_tracker_to_webster_dictionary"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/dictionary_to_newsfeed"
        android:icon="@drawable/icons8_blog_48"
        android:title="@string/flight_tracker_to_news_feed"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/dictionary_to_nyt"
        android:icon="@drawable/icons8_us_news_48"
        android:title="@string/flight_tracker_to_nyt_article_search"
        android:orderInCategory="1"
        app:showAsAction="always"/>

</menu>