<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newsfeed_listview_row_title"
        android:text="@string/titleexample"
        android:textColor="@color/design_default_color_primary"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsfeed_listview_row_title"
        android:text="@string/websitename"
        android:id="@+id/newsfeed_listview_row_site"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsfeed_listview_row_title"
        android:text="@string/author"
        android:layout_toRightOf="@id/newsfeed_listview_row_site"
        android:paddingLeft="20dp"
        android:id="@+id/newsfeed_listview_row_author"/>


</RelativeLayout>